# dji-waypoint-mission-creation

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  OFRN_in_Schools.md  README.md  convert_to_dji.py  convert_to_dji_m3m_30ft_brucetest22.py  convert_to_dji_m4e_50ft.py  md_to_docx.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
examples/: build_from_csv.py  sample_points.csv
src/dji_waypoints/: __init__.py  cli.py  config.py  mission.py  readers.py
tests/: test_app_helpers.py  test_config.py  test_readers.py
